--- a/app/api/Dockerfile
+++ b/app/api/Dockerfile
@@ -12,6 +12,8 @@ RUN pip install --upgrade pip && pip install -r /app/api/requirements.txt
 
 COPY . /app
 
+RUN apt-get update && apt-get install -y git
+
 EXPOSE 8000
 
 CMD ["uvicorn", "api.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
