I’m going to summarize what I implemented per your UI plan and where to find it, then note how to run and what’s left to refine.
What I Implemented

Design system: Tailwind tokens and dark mode by default; accessible focus; shadcn-style UI primitives using Radix.
App shell: Header (logo, theme toggle, ⌘K search), left rail with New Project; responsive grid layout.
Command palette: ⌘K/Ctrl+K and / to open; debounced backend search; Enter opens file; “New Project” action and N global shortcut.
Projects grid: React Query-powered list with skeletons, empty state, status badge, actions menu (delete working, edit stub).
Project catalog: Files grid with cards; New File dialog; basic filters scaffold; Artifacts panel (read-only CTA).
Item modal viewer: Server-rendered Markdown HTML with ToC anchors, Prism theme for code, and lazy Mermaid rendering; delete action with optimistic refresh.
API client & schemas: Centralized client with X-Token; Zod validation; Query retry tuned off for 4xx.
Telemetry: Lightweight hooks logging key UI actions (load, click project, open item modal, create/delete) to a stub.
Docs: Short UI dev guide, design tokens reference, and keyboard shortcuts.
Key Files

App shell and providers:
app/frontend/app/layout.tsx:1
app/frontend/components/providers.tsx:1
app/frontend/components/app-shell.tsx:1
app/frontend/components/theme-toggle.tsx:1
UI primitives (shadcn-style):
app/frontend/components/ui/button.tsx:1
app/frontend/components/ui/card.tsx:1
app/frontend/components/ui/dialog.tsx:1
app/frontend/components/ui/sheet.tsx:1
app/frontend/components/ui/dropdown-menu.tsx:1
app/frontend/components/ui/tooltip.tsx:1
app/frontend/components/ui/tabs.tsx:1
app/frontend/components/ui/command.tsx:1
app/frontend/components/ui/badge.tsx:1
app/frontend/components/ui/separator.tsx:1
app/frontend/components/ui/toaster.tsx:1
Pages and features:
app/frontend/app/page.tsx:1
app/frontend/app/projects/[project]/page.tsx:1
app/frontend/components/search-command.tsx:1
app/fron

--- a/app/frontend/tsconfig.json
+++ b/app/frontend/tsconfig.json
@@ -14,7 +14,9 @@
     "incremental": true,
     "strict": true,
     "baseUrl": ".",
-    "paths": {},
+    "paths": {
+      "@/*": ["./*"]
+    },
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
