Implemented fixes to stop the 404s by aligning proxy paths and removing hard-coded IPs.
Changes Made

Caddy proxy: stop stripping /api and proxy to localhost
docker/Caddyfile:1
route /api* now proxies to localhost:8000 without uri strip_prefix
route * now proxies to localhost:3000
Frontend API base: remove hard-coded remote IP and allow dynamic base
app/frontend/.env:1 set NEXT_PUBLIC_API_BASE= (blank) with comments
app/frontend/lib/apiClient.ts:12 use same-origin base (window.location.origin + '/api') in browser; keeps override via ?apiBase= and SSR fallback to http://localhost:8081/api
Docs: update to correct proxy port
README.md: updated to 8081
docs/DEPLOY.md: updated to 8081
Why this fixes 404s

Previously, Caddy stripped /api then forwarded /healthz to the API, but the FastAPI app serves endpoints under /api/* (app/api/main.py). That mismatch caused 404. Now the proxy forwards the full path unchanged.
Hard-coded 10.42.9.11 in proxy and frontend env caused requests to the wrong host. Replaced with robust upstreams and dynamic base.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - ./app/worker:/app/worker
       - ./data:/data
     ports:
-      - "${API_PORT:-8000}:8000"
+      - "8000:8000"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/api/healthz"]
       interval: 10s
@@ -40,14 +40,12 @@ services:
       context: ./app/frontend
       dockerfile: Dockerfile
     env_file: .env
-    environment:
-      - NEXT_PUBLIC_API_BASE=http://proxy:8080/api
     depends_on:
       - api
     volumes:
       - ./app/frontend:/app
     ports:
-      - "${WEB_PORT:-3000}:3000"
+      - "3000:3000"
 
   redis:
     image: redis:7-alpine
@@ -56,11 +54,10 @@ services:
 
   proxy:
     image: caddy:2-alpine
+    network_mode: host
     depends_on:
       - api
       - frontend
-    ports:
-      - "8080:8080"
     volumes:
       - ./docker/Caddyfile:/etc/caddy/Caddyfile:ro
 
@@ -76,3 +73,7 @@ volumes:
   data:
     driver: local
 
+networks:
+  default:
+    name: meatyideas_net
+    driver: bridge
