--- a/app/api/requirements.txt
+++ b/app/api/requirements.txt
@@ -4,6 +4,7 @@ sqlalchemy==2.0.35
 pydantic==2.9.2
 pydantic-settings==2.5.2
 python-dotenv==1.0.1
+python-multipart==0.0.7
 GitPython==3.1.43
 redis==5.0.8
 rq==1.16.2
