Created Phase 3 directories, tree, DnD, and batch move end-to-end. I also set up a live tracking doc and flipped DIRS_PERSIST on for local validation.
What I set up

Backend: Directory model, CRUD/move APIs, tree enhancements, batch move endpoint, SSE events.
Frontend: File tree with empty dirs, multi-select, drag-and-drop, basic folder actions, SSE-driven refresh.
Tests & Docs: API tests for dirs/batch move; user docs on new flows.
Config: Enabled DIRS_PERSIST in .env and .env.example.
Tracking

Impl TODOs and notes: docs/project_plans/implementation_plans/impl_tracking/phase-3-directories-tree-dnd-tracking.md:1
Backend changes

New model: directories persisted and unique per project
app/api/models.py:37,64,93
Directory router: create, move (dry_run), delete; safe paths; SSE events
app/api/routers/dirs.py:1
Tree endpoint: include_empty_dirs=1; depth limiting; merged with Directory rows
app/api/routers/projects.py:132
Batch move: files and dirs (supports cross-project for files), dry_run, reindex, SSE summary
app/api/routers/files.py:260
Single file move emits SSE event
app/api/routers/files.py:214
Startup backfill: when DIRS_PERSIST=1, stage directories from existing file paths
app/api/main.py:38
Config: expose DIRS_PERSIST, results modal already wired
app/api/routers/config.py:1
Schemas

New Pydantic models for dirs and batch move
app/api/schemas.py:225
Frontend changes

File tree: renders empty dirs, multi-select (cmd/ctrl/shift), drag files to folders, create/rename/delete for folders; refreshes on SSE
app/frontend/components/files/file-tree.tsx:1
SSE: tree refreshes on dir.* and file/ batch move events
app/frontend/components/files/file-tree.tsx:25
Docs

User guide for directories/tree/batch move
docs/user/files-and-directories.md:1
Env/flags

Flip DIRS_PERSIST on (so empty dirs persist and show in tree)
.env:20
.env.example:16
Tests

API tests covering directory CRUD/move and batch move flows
app/api/tests/test_phase3_dirs_and_batch.py:1
Note: Running pytest r

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,14 @@ REDIS_URL=redis://redis:6379/0
 DATA_DIR=/data
 TOKEN=devtoken
 OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4317
-OTEL_SERVICE_NAME=meatyprojects
+OTEL_SERVICE_NAME=meatyprojects-api
 SEED_DEMO=1
-
+GITHUB_TOKEN=NONE
+SEMANTIC_SEARCH=0
+SEARCH_MAX_LIMIT=50
+# Feature flags
+GIT_INTEGRATION=1
+SHARE_LINKS=0
+GROUPS_UI=0
+DIRS_PERSIST=1
+RESULTS_MODAL=1
