Implemented the remediation plan end-to-end:
Added Alembic support, baseline schema, and automatic startup upgrades so deployments run controlled migrations (alembic.ini, app/api/main.py:26, app/api/migrations/versions/20250914_0001_baseline.py:1, app/api/migrations/versions/20250914_0002_share_link_allow_export.py:1, app/api/requirements.txt:3).
Locked feature flags across API and UI—directories and project groups now 404 when disabled, results modal/tree respect config, and the project page hides the tree unless DIRS_PERSIST is on (app/api/routers/dirs.py:37, app/api/routers/groups.py:22, app/api/routers/projects.py:134, app/frontend/components/app-shell.tsx:17, app/frontend/app/projects/[project]/page.tsx:24).
Extended share links with allow_export, surfaced the flag through APIs, creation dialog, and public share view (app/api/models.py:168, app/api/schemas.py:300, app/api/routers/sharing.py:41, app/frontend/components/projects/share-links-dialog.tsx:20, app/frontend/app/share/[token]/page.tsx:13).
Instrumented repos, directories, sharing, and import/export flows with structured logs and durations, including worker job telemetry (app/api/routers/repos.py:30, app/api/routers/dirs.py:43, app/api/routers/import_export.py:20, app/api/routers/sharing.py:19, app/worker/jobs/import_export_jobs.py:64).
Captured the remediation strategy in docs/project_plans/implementation_plans/9-13-enhancements/9-13-enhancements-remediation-plan-2025-09-14.md:1.

--- a/app/api/requirements.txt
+++ b/app/api/requirements.txt
@@ -1,6 +1,7 @@
 fastapi==0.112.0
 uvicorn[standard]==0.30.6
 sqlalchemy==2.0.35
+alembic==1.13.1
 pydantic==2.9.2
 pydantic-settings==2.5.2
 python-dotenv==1.0.1
@@ -21,4 +22,3 @@ pytest==8.3.3
 ruff==0.6.8
 black==24.8.0
 mypy==1.11.2
-
