--- a/app/api/alembic.ini
+++ b/app/api/alembic.ini
@@ -1,5 +1,5 @@
 [alembic]
-script_location = app/api/migrations
+script_location = migrations
 prepend_sys_path = .
 
 sqlalchemy.url = sqlite:///placeholder.db
