Creation & Dashboard UX Enhancements
Backend & Config

Added global file creation endpoint, recent files feed, richer sorting, group color validation, and workspace status exposure so UI can drive the new flows (app/api/routers/files.py:1, app/api/routers/projects.py:1, app/api/routers/groups.py:1, app/api/routers/config.py:1, app/api/schemas.py:1, app/api/settings.py:1).
Updated environment example with new flags and optional statuses seed (.env.example:1).
Frontend UX

Reworked app shell with flag-controlled “New” menu, telemetry, quick-create dialog hookup, and recent file hotkeys (app/frontend/components/app-shell.tsx:1).
Refactored quick create dialog to support project selection, global usage, and new /files endpoint (app/frontend/components/files/file-create-dialog.tsx:1, app/frontend/components/files/folder-path-combobox.tsx:1).
Introduced full-screen create flow with Save/Save & Close actions, live preview, template stub, and telemetry (app/frontend/app/files/create/page.tsx:1).
Enhanced dashboard with sort dropdown, quick filters, recent files rail, inline new project card, telemetry, and colored group badges (app/frontend/app/page.tsx:1, app/frontend/components/dashboard/recent-files.tsx:1, app/frontend/components/projects/group-badge.tsx:1).
Updated project detail to reuse the new badge styling and honor current project context (app/frontend/app/projects/[project]/page.tsx:1, app/frontend/app/projects/[project]/edit/[file]/page.tsx:1).
Extended config/types for status options, new telemetry events, and recent files payloads (app/frontend/lib/config.ts:1, app/frontend/lib/types.ts:1).
Docs & Tracking

Logged telemetry contract, QA checklist, runbook, and updated implementation tracker (docs/telemetry/creation-dashboard.md:1, docs/qa/2025-09-27-creation-dashboard.md:1, docs/runbooks/ux_creation_dashboard_refresh.md:1, docs/impl_tracking/2025-09-27-creation-dashboard-ux.md:1).
Next Steps

Execute the QA sweep from docs/qa/2025-09-27-creation-dashboard.md, p

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,6 @@ GROUPS_UI=1
 DIRS_PERSIST=1
 RESULTS_MODAL=1
 PROJECT_MODAL=0
+UX_CREATION_DASHBOARD_REFRESH=0
+# Optional JSON array of status objects with keys `key`, `label`, and optional `color`
+PROJECT_STATUSES=[{"key":"idea","label":"Idea"},{"key":"discovery","label":"Discovery"},{"key":"draft","label":"Draft"},{"key":"live","label":"Live"},{"key":"archived","label":"Archived"}]
